fixed text flicker via img width

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3,6 +3,7 @@
 
 body {
   margin: 0;
+  
 }
 
 a:hover {
@@ -34,8 +35,6 @@ a:focus{
 }
 
 .avatar {
-  width: 90px;
-  height: 90px;
   border-radius: 50%;
   margin: 0 auto;
 }
@@ -47,9 +46,9 @@ a:focus{
   height: 100vh;
   border-right: 2px solid #abb6de5b;
   text-align: center;
-  padding-right: 10px;
   background-color: #428fa9;
-  
+
+
 }
 
 
@@ -69,7 +68,8 @@ a:focus{
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  padding: 10px;
+  /* padding: 10px; */
+
 }
 
 .nav-links a:hover {
@@ -82,7 +82,6 @@ a:focus{
 }
 
 .social-links img {
-  width: 50px;
   cursor: pointer;
   filter: invert(100%);
 }
@@ -165,7 +164,7 @@ ul {
 
 
 /* Alerts and form errors used by phx.new */
-.alert {
+/* .alert {
   padding: 15px;
   margin-bottom: 20px;
   border: 1px solid transparent;
@@ -199,8 +198,8 @@ ul {
   margin: -1rem 0 2rem;
 }
 
-/* LiveView specific classes for your customization */
-.phx-no-feedback.invalid-feedback,
+LiveView specific classes for your customization */
+/* .phx-no-feedback.invalid-feedback,
 .phx-no-feedback .invalid-feedback {
   display: none;
 }
@@ -246,9 +245,9 @@ ul {
   color: black;
   text-decoration: none;
   cursor: pointer;
-}
+} */
 
-.fade-in-scale {
+/* .fade-in-scale {
   animation: 0.2s ease-in 0s normal forwards 1 fade-in-scale-keys;
 }
 
@@ -261,7 +260,7 @@ ul {
 }
 .fade-out {
   animation: 0.2s ease-out 0s normal forwards 1 fade-out-keys;
-}
+} */
 
 
 
@@ -287,10 +286,6 @@ ul {
     justify-content: space-evenly;
     width: 100vw;
     height: 10vh;
-  }
-
-  .title {
-    display: none;
   }
 
   .avatar {
