--- a/assets/css/phoenix.css
+++ b/assets/css/phoenix.css
@@ -15,7 +15,6 @@ h3{font-size: 2.2rem; letter-spacing: -.08rem; line-height: 1.35}
 h4{font-size: 1.8rem; letter-spacing: -.05rem; line-height: 1.5}
 h5{font-size: 1.6rem; letter-spacing: 0; line-height: 1.4}
 h6{font-size: 1.4rem; letter-spacing: 0; line-height: 1.2}
-pre{padding: 1em;}
 
 /* .container{
   margin: 0 auto;
@@ -55,7 +54,7 @@ select {
 }
 
 /* Headers */
-header {
+/* header {
   width: 100%;
   background: #fdfdfd;
   border-bottom: 1px solid #eaeaea;
@@ -66,14 +65,14 @@ header section {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-}
+} */
 /* header section :first-child {
   order: 2;
 }
 header section :last-child {
   order: 1;
 } */
-header nav ul,
+/* header nav ul,
 header nav li {
   margin: 0;
   padding: 0;
@@ -87,10 +86,10 @@ header nav ul {
 }
 header nav a {
   display: block;
-}
+} */
 
 @media (min-width: 40.0rem) { /* Small devices (landscape phones, 576px and up) */
-  header section {
+  /* header section {
     flex-direction: row;
   }
   header nav ul {
@@ -99,5 +98,5 @@ header nav a {
   .phx-logo {
     flex-basis: 527px;
     margin: 2rem 1rem;
-  }
+  } */
 }
